name:                yuntan-device
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-user#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files: include/mqtt.h
                  , include/mqtt_pal.h
                  , include/hs_mqtt.h
                  , include/posix_sockets.h
                  , cbits/mqtt.c
                  , cbits/mqtt_pal.c
                  , cbits/hs_mqtt.c
                  , config.example.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Device
                     , Device.API
                     , Device.Types
                     , Device.DataSource
                     , Device.DataSource.Device
                     , Device.DataSource.Table

                     , Device.MQTT

                     , Device.Handler
                     , Device.Config
  build-depends:       base >= 4.7 && < 5
                     , unix-time
                     , text
                     , mysql-simple
                     , hashable
                     , scotty
                     , haxl
                     , resource-pool
                     , async
                     , bytestring
                     , mtl
                     , aeson
                     , http-types
                     , cryptohash
                     , hex

                     , uuid

                     , yuntan-common-config-mysql
                     , yuntan-common-list-result
                     , yuntan-common-order
                     , yuntan-common-scotty
                     , yuntan-common-scotty-type
                     , yuntan-common-json
                     , conduit
                     , stm
                     , transformers
                     , cache
                     , clock
                     , MissingH
                     , entropy
  default-language:    Haskell2010
  build-tools: hsc2hs
  include-dirs: include
  c-sources: cbits/mqtt.c
           , cbits/mqtt_pal.c
           , cbits/hs_mqtt.c

executable yuntan-device
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-device
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , data-default-class
                     , yaml
                     , text
                     , yuntan-common-config-mysql
                     , yuntan-common-scotty-type
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-user
