name:                yuntan-device
version:             0.1.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-user#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files: config.sample.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Device
                     , Device.API
                     , Device.RawAPI
                     , Device.Types
                     , Device.DataSource
                     , Device.DataSource.Device
                     , Device.DataSource.Table

                     , Device.MQTT

                     , Device.Handler
                     , Device.Config

  build-depends:       base >= 4.7 && < 5
                     , unix-time
                     , text
                     , hashable
                     , scotty
                     , haxl
                     , resource-pool
                     , async
                     , bytestring
                     , mtl
                     , aeson
                     , http-types

                     , uuid

                     , psql-utils
                     , aeson-result
                     , scotty-utils
                     , scotty-haxl
                     , aeson-helper
                     , rediscaching-haxl
                     , hedis

                     , net-mqtt
                     , network-uri
                     , stm
                     , cache
                     , clock
                     , entropy

                     , postgresql-simple
                     , hslogger
  default-language:    Haskell2010

executable yuntan-device
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-device
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , data-default-class
                     , yaml
                     , psql-utils
                     , scotty-haxl
                     , rediscaching-haxl
                     , net-mqtt
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-user
